# rule-forge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.yml
.claude/agents/: builder.md  codebase-explorer.md  rule-author.md
.claude/skills/: ruleforge.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs-deploy.yml  frontend-deploy.yml  perf-bench-nightly.yml  test-ci.yml
.zcode/plans/: plan-sess_62ea08dc-7eb1-482a-8bca-d4aedcc7a4dc.md
backend/ruleforge-console/: pom.xml
backend/ruleforge-console-app/: pom.xml
backend/ruleforge-core/: pom.xml
backend/ruleforge-executor/: pom.xml
backend/ruleforge-executor-app/: pom.xml
backend/ruleforge-parent/: pom.xml
cli/: package-lock.json  package.json  tsconfig.json
cli/lib/: utils.js  utils.ts
cli/tests/: utils.test.js  utils.test.ts
console-ui/: .dockerignore  .env.example  DOCKER.md  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  playwright.config.smoke.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.js  vitest.setup.js  webpack.config.js
console-ui-v1/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
console-ui-v1/src/: App.tsx
console-ui/e2e/: _business-flow-100-tour.spec.js  _business-flow-100-tour.spec.ts  _dialog-100-tour.spec.js  _dialog-100-tour.spec.ts  _dialog-tour.spec.js  _dialog-tour.spec.ts  _editor-100-tour.spec.js  _editor-100-tour.spec.ts  _editor-tour.spec.js  _editor-tour.spec.ts  _frame-interaction-tour.spec.js  _frame-interaction-tour.spec.ts  _frame-tree-tour.spec.js  _frame-tree-tour.spec.ts  _interactive-100-tour.spec.js  _interactive-100-tour.spec.ts  _login-tour.spec.js  _login-tour.spec.ts  _micro-tour.spec.js  _micro-tour.spec.ts  _responsive-tour.spec.js  _responsive-tour.spec.ts  _state-tour.spec.js  _state-tour.spec.ts  _visual-tour.spec.js  _visual-tour.spec.ts  a11y-scan.spec.js  a11y-scan.spec.ts  agent-panel.spec.js  agent-panel.spec.ts  agent-v522-drafts-health.spec.ts  app.spec.js  app.spec.ts  batchtest-excel-upload.spec.ts  datasource-panel.spec.js  datasource-panel.spec.ts  decision-table-editor.spec.js  decision-table-editor.spec.ts  decision-tree-editor.spec.js  decision-tree-editor.spec.ts  (+29 more)
console-ui/html/: editor.html  frame.html  login.html
console-ui/scripts/: migrate-bootbox.py  migrate-test-bootbox-v2.py  migrate-test-bootbox.py
console-ui/src/: Remark.ts  Styles.ts  Utils.test.ts  Utils.ts  bootbox.ts  global.d.ts  main.tsx
demo/anti-fraud-detection/: README.md
demo/sme-loan-approval/: README.md
docker/init-sql/: 01-init-databases.sql  e2e_seed.sql
docs/: architecture-audit-v6.10.md  architecture-audit-v6.11.md  engine-tech-debt.md  roadmap.md
docs-site/: index.md  package-lock.json  package.json  post-road-b-migration.md
docs-site/.vitepress/: config.ts
docs-site/api/: console-api.md  decision-api.md  executor-api.md  model-service-api.md
docs-site/architecture/: ai-rules-hybrid.md  decision-flow.md  overview.md  rete-engine.md
docs-site/deployment/: docker-compose.md  production.md
experiments/: README.md
experiments/server-rust/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
experiments/server-rust/crates/rf-executor/: Cargo.toml
experiments/server-rust/crates/rf-executor/src/: compensation.rs  condition.rs  dispatch.rs  error.rs  flow_context.rs  lib.rs  next_node.rs  node_executor.rs  node_result.rs  rule_engine.rs  traverser.rs  vars.rs
experiments/server-rust/crates/rf-executor/src/executors/: action.rs  boundary_event.rs  compensation_end.rs  compensation_intermediate.rs  compensation_start.rs  compensation_throw.rs  end_event.rs  gateway.rs  intermediate_event.rs  mod.rs  multi_instance.rs  rule.rs  script.rs  user_task.rs
experiments/server-rust/crates/rf-executor/tests/: boundary_multi_outgoing_test.rs  compensation_scope_test.rs  compensation_throw_test.rs  condition_test.rs  end_event_boundary_chain_test.rs  end_event_test.rs  intermediate_event_namespacing_test.rs  intermediate_event_test.rs  parallel_gateway_test.rs  routing_test.rs  traverser_test.rs  user_task_suspend_test.rs
experiments/server-rust/crates/rf-http/: Cargo.toml
experiments/server-rust/crates/rf-http/src/: flow_def_repo.rs  inflight.rs  lib.rs  main.rs  state.rs
experiments/server-rust/crates/rf-http/src/routes/: decision.rs  evaluate.rs  event.rs  health.rs  invalidate.rs  mod.rs
experiments/server-rust/crates/rf-http/tests/: decision_test.rs  evaluate_test.rs  event_test.rs  inflight_event_pg_test.rs  inflight_pg_test.rs  recovery_loop_test.rs
experiments/server-rust/crates/rf-ir/: Cargo.toml
experiments/server-rust/crates/rf-ir/src/: attrs.rs  flow_definition.rs  flow_node.rs  ir_error.rs  lib.rs  node_kind.rs  sequence_flow.rs
experiments/server-rust/crates/rf-parse/: Cargo.toml
experiments/server-rust/crates/rf-parse/src/: bpmn_parser.rs  lib.rs
experiments/server-rust/crates/rf-parse/tests/: parser_test.rs
experiments/server-rust/crates/rf-rule/: Cargo.toml
experiments/server-rust/crates/rf-rule/benches/: rete_fire.rs
experiments/server-rust/crates/rf-rule/src/: lib.rs  mock.rs
experiments/server-rust/crates/rf-state/: Cargo.toml
experiments/server-rust/crates/rf-state/migrations/: 20260608000001_rust_decision_flow_state.sql
experiments/server-rust/crates/rf-state/src/: lib.rs  persistence.rs  recovery.rs  serialization.rs  state_row.rs
experiments/server-rust/crates/rf-state/tests/: persistence_test.rs
frontend/: package.json  playwright.config.js  vite.config.ts  vitest.config.js  webpack.config.js
model-service/: Dockerfile
scripts/: build-images.sh  dev-lan.sh  dev-local.sh  dev-up.sh  run-local-jar.sh  start-all.sh  start-backend.sh  start-console-ui.sh  start-console.sh  start-executor.sh  start-frontend.sh  start-server.sh
server/: .env.example  CHANGELOG.md  Dockerfile  Dockerfile.console  Dockerfile.executor  README.md  pom.xml
(+2661 files in other folders)
