[package]
name = "rf-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immutable intermediate representation for RuleForge decision flows (BPMN IR)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
