[package]
name = "rf-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BPMN 2.0 XML parser → FlowDefinition IR (roxmltree zero-copy)"

[dependencies]
rf-ir = { path = "../rf-ir" }
roxmltree = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
