[package]
name = "rf-rule"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rule engine abstraction (trait RuleEngine + Mock impl)"

[dependencies]
rf-executor = { path = "../rf-executor" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rete_fire"
harness = false
